--- a/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
@@ -59,10 +59,14 @@
     <th>Notes</th>
     </tr>
     <!-- TMPL_LOOP NAME="resultsloop" -->
-    <!-- TMPL_IF EXPR="odissue+fines > 0" -->
+    <!-- TMPL_IF name="overdue" -->
     <tr class="problem">
     <!-- TMPL_ELSE -->
+    <!-- TMPL_IF name="toggle" -->
+    <tr class="highlight">
+    <!-- TMPL_ELSE -->
     <tr>
+    <!-- /TMPL_IF -->
     <!-- /TMPL_IF -->
     <td><!-- TMPL_VAR NAME="cardnumber" --></td>
     <td><a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --></a>
