updated french translation + improved & fixed default zebra config files

--- a/koha-tmpl/intranet-tmpl/prog/fr/acqui/booksellers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/acqui/booksellers.tmpl
@@ -24,7 +24,7 @@
 				<!-- /TMPL_IF -->
 			</td>
 			<td>
-				<a href="parcels.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Commande reçue</a>
+				<a href="parcels.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Réceptionner colis</a>
 			</td>
 			<td><a href="supplier.pl?supplierid=<!-- TMPL_VAR name=supplierid -->"><!-- TMPL_VAR name="name" --></a></td>
 			<td>
