--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/subscription-detail.tmpl
@@ -138,7 +138,7 @@ function irregularity(){
     <h1>Abonnement N°<!--TMPL_VAR name="subscriptionid"--></h1>
     <!--TMPL_IF Name="abouttoexpire"--><div class="problem">L'abonnement va expirer. Il faut le renouveller.</div><!--/TMPL_IF-->
     <div id="action">
-        <a href="subscription-add.pl?op=mod&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Modifier</a> <a href="subscription-add.pl?op=dup&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Dupliquer</a> <a href="subscription-renew.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->"> </a> <a href="serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1">Bulletiner</a><a href="serials-collection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Etat de collection</a>
+        <a href="subscription-add.pl?op=mod&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Edit</a>  <a href="subscription-add.pl?op=dup&amp;subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Duplicate </a>  <a href="subscription-renew.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Renew </a>  <a href="serials-edit.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&amp;serstatus=1">Receive</a>  <a href="serials-collection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Serial Collection</a>
         <!-- TMPL_IF NAME="routing" -->
         <a href="routing.pl?subscriptionid=<!-- TMPL_VAR NAME="subscriptionid" -->">Modifier la liste de circulation</a>
         <!-- TMPL_ELSE -->
@@ -209,7 +209,7 @@ function irregularity(){
             </p>
             <p><label>Modèle de numérotation : </label>
                 <!-- TMPL_IF name="numberpattern1" -->
-                    Numéro
+                    Number only
                 <!-- /TMPL_IF -->
                 <!-- TMPL_IF name="numberpattern2" -->
                     Volume, Numéro, Fascicule
@@ -231,7 +231,7 @@ function irregularity(){
                 <!-- /TMPL_IF -->
             </p>
             <table>
-            <tr><td><p><label>Commence par : </label></p></td>
+            <tr><td><p>Commence par : </p></td>
                 <td align="center"><!--TMPL_VAR NAME="lastvalue1"--></td>
             <!--TMPL_IF NAME="lastvalue2"-->
                 <td align="center">&nbsp; 
@@ -244,7 +244,7 @@ function irregularity(){
                 </td>
             <!--/TMPL_IF-->
             </tr>
-            <tr><td><p><label>Retour : </label></p></td>
+            <tr><td><p>Retour : </p></td>
                 <td align="center">&nbsp;</td>
             <!--TMPL_IF NAME="whenmorethan2"-->
                 <td align="center">&nbsp; 
