adding series title to adv search (no need to expand more)

--- a/koha-tmpl/opac-tmpl/prog/en/opac-advsearch.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-advsearch.tmpl
@@ -80,8 +80,8 @@
             <option value="ti" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>Title</option>
             <!-- TMPL_IF NAME="expanded_options" -->
                 <option value="ti,phr" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>&nbsp;&nbsp;&nbsp;&nbsp; Title Phrase</option>
-                <option value="se" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>&nbsp;&nbsp;&nbsp;&nbsp; Series Title</option>
             <!-- /TMPL_IF -->
+                <option value="se" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>Series Title</option>
         </select>
         <input type="text" size="30" name="q" title="Enter search terms" value=""/>
         <!-- TMPL_IF NAME="expanded_options" -->
