some minor bugfixes, templates improvements & zebra default config file changes

--- a/koha-tmpl/intranet-tmpl/prog/en/authorities/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/authorities/detail.tmpl
@@ -76,7 +76,7 @@ function showChildren(mynumber) {
 <div id="authorities_detail_details">
 <!-- TMPL_LOOP NAME="0XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
