--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/MARCdetail.tmpl
@@ -82,7 +82,7 @@
     <div id="1XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="1XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -110,7 +110,7 @@
     <div id="2XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="2XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -138,7 +138,7 @@
     <div id="3XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="3XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -166,7 +166,7 @@
     <div id="4XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="4XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -194,7 +194,7 @@
     <div  id="5XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="5XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -222,7 +222,7 @@
     <div id="6XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="6XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -250,7 +250,7 @@
     <div  id="7XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="7XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -278,7 +278,7 @@
     <div id="8XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="8XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
@@ -306,7 +306,7 @@
     <div id="9XX" class="content_hidden">
         <!-- TMPL_LOOP NAME="9XX" -->
                 <!-- TMPL_IF name="tag" -->
-                    <p>
+                    <p class="tag">
                         <!-- TMPL_VAR NAME="tag" -->
                     </p>
                 <!-- TMPL_ELSE -->
