--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet2.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet2.css
@@ -167,11 +167,12 @@ legend {
 }
 
 .available {
-    background-color: white;
+    font-size:0.75em;
 }
 
 .unavailable {
     background-color: #FFED3D;
+    font-size:0.75em;
 }
 
 .hasexpirated {
