--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -213,6 +213,7 @@
     <table>
         <tr>
             <th scope="col">Title</th>
+            <th scope="col">Barcode</th>
             <th scope="col">Date due</th>
             <th scope="col">Itemtype</th>
             <th scope="col">Charge</th>
@@ -231,13 +232,17 @@
         <tr>
             <!-- /TMPL_IF -->
           <!-- /TMPL_IF -->
-            <td>
-                <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-                    <!-- TMPL_VAR NAME="title" -->
-                </a>
-                <!-- TMPL_VAR name="author" -->
-            </td>
             <td><!-- TMPL_VAR NAME="date_due" --></td>
+            <td>
+                <p><a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+                    <!-- TMPL_VAR NAME="title" -->
+                </a></p>
+                <p><!-- TMPL_VAR name="author" -->
+                    <!-- TMPL_IF name="publishercode" --> - <!-- TMPL_VAR name="publishercode" --> <!-- /TMPL_IF -->
+                    <!-- TMPL_IF name="publicationyear" -->- <!-- TMPL_VAR name="publicationyear" --><!-- /TMPL_IF -->
+                </p>
+            </td>
+            <td><!-- TMPL_VAR NAME="barcode" --></td>
             <td>
                 <!-- TMPL_VAR NAME="itemtype_description" -->
                 <!-- TMPL_IF NAME="itemtype_image" -->
@@ -274,9 +279,9 @@
         </tr>
         <!-- /tmpl_loop -->
         <tr>
-            <td colspan="3">Total replacement cost:</td>
+            <td colspan="5">Total replacement cost:</td>
             <td><!-- TMPL_VAR NAME="totalprice" --></td>
-            <td colspan="3">&nbsp;</td>
+            <td colspan="2">&nbsp;</td>
         </tr>
         </table>
         <div>
