--- a/koha-tmpl/opac-tmpl/prog/en/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/includes/opac.css
@@ -146,10 +146,14 @@ tr.highlight td, tr.highlight th {
 #advsearch-itemtype table {
     border-collapse: separate;
     border-spacing: 3px;
+    border : 0px;
+    margin : 0px;
 }
 #advsearch-itemtype table tr td {
     background-color:#CCCCCC;
-    width:100%;
+    border : 0px;
+    margin : 0px;
+    width:700px;
 }
 #advsearch-itemtype table tr td p {
     font-size:0.8em;
