--- a/koha-tmpl/opac-tmpl/prog/en/opac-ISBDdetail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-ISBDdetail.tmpl
@@ -4,16 +4,17 @@
 <!--TMPL_INCLUDE NAME="masthead.inc" -->
 <!--TMPL_INCLUDE NAME="navigation.inc" -->
 
-    <div id="action">
-        <!-- TMPL_UNLESS NAME="norequests" -->
-        	<!-- TMPL_IF NAME="RequestOnOpac" -->
-        <a href="/cgi-bin/koha/opac-reserve.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-            Place Reserve
-        </a>
-        	<!-- /TMPL_IF -->
-        <!-- /TMPL_UNLESS -->
-        <a href="/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-            Normal View
+<div id="action">
+
+<!-- TMPL_UNLESS NAME="norequests" -->
+	<!-- TMPL_IF NAME="RequestOnOpac" -->
+		<a href="/cgi-bin/koha/opac-reserve.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+		Place Reserve
+		</a>
+	<!-- /TMPL_IF -->
+<!-- /TMPL_UNLESS -->
+        <a href="/cgi-bin/koha/opac-MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+            MARC View
         </a>
         <a href="/cgi-bin/koha/opac-ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
             ISBD
@@ -21,17 +22,17 @@
         <a href="/cgi-bin/koha/opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
             Print
         </a>
-        <!-- TMPL_IF name="virtualshelves" -->
-            <!-- TMPL_IF NAME="loggedinusername" -->
-            <a href="/cgi-bin/koha/opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
-                Add to My Book List
-            </a>
-            <!-- /TMPL_IF -->
-        <!-- /TMPL_IF -->
+<!-- TMPL_IF name="virtualshelves" -->
+    <!-- TMPL_IF NAME="loggedinusername" -->
+        <a href="/cgi-bin/koha/opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
+            Add to My Book List
+        </a>
+    <!-- /TMPL_IF -->
+<!-- /TMPL_IF -->
         <a href="#" onclick="addRecord('<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
             Add to My Book Bag
         </a>
-    </div>
+</div>
     
     <h1>ISBD</h1>
     <!-- TMPL_VAR name="ISBD" -->
