--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/results.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/results.tmpl
@@ -254,20 +254,20 @@
                                     </p>
                                 <!-- /TMPL_IF -->
                                 </td>
-                                <td style="white-space: nowrap">
+                                <td>
                                     <!-- TMPL_IF NAME="items_loop" -->
                                         <span class="available">
                                         <!-- TMPL_LOOP NAME="items_loop" -->
-                                            <!-- <!-- TMPL_VAR NAME="branchcode" --> -->
-                                            <!-- TMPL_VAR NAME="branchname" -->
-                                            (<!-- TMPL_VAR NAME="count" -->
-                                                <!-- TMPL_IF name="itemcallnumber" --> <i><!-- TMPL_VAR name="itemcallnumber" -->)</i><!-- /TMPL_IF -->
-                                         <!-- TMPL_IF name="location" --> <i>(<!-- TMPL_VAR name="location" -->)</i><!-- /TMPL_IF -->
+                                            <!-- TMPL_VAR NAME="count" --> <!-- TMPL_VAR NAME="branchname" -->
+                                            <i>
+                                        <!-- TMPL_IF name="location" --><!-- TMPL_VAR name="location" --><!-- /TMPL_IF -->
+                                        <!-- TMPL_IF name="itemcallnumber" --><!-- TMPL_VAR name="itemcallnumber" --><!-- /TMPL_IF -->
                                          <!-- TMPL_IF name="classification" -->
                                             <a href="/cgi-bin/koha/catalogue/search.pl?q=callnum:<!-- TMPL_VAR NAME="classification" ESCAPE="URL" -->">
                                                 <!-- TMPL_VAR NAME="classification" -->
                                             </a>
                                         <!-- /TMPL_IF -->
+                                        </i>
                                          <br />
                                         <!-- /TMPL_LOOP -->
                                         </span>
