--- a/koha-tmpl/opac-tmpl/prog/en/opac-MARCdetail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-MARCdetail.tmpl
@@ -5,30 +5,33 @@
 <!--TMPL_INCLUDE NAME="navigation.inc" -->
 
 <div id="action">
-    <!-- TMPL_UNLESS NAME="norequests" -->
-    	<!-- TMPL_IF NAME="RequestOnOpac" -->
-    <a href="/cgi-bin/koha/opac-reserve.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-        Place Reserve
-    </a>
-    	<!-- /TMPL_IF -->
-    <!-- /TMPL_UNLESS -->
-    <a href="/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-        Normal View
-    </a>
-    <a href="/cgi-bin/koha/opac-ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-        ISBD
-    </a>
-    <a href="/cgi-bin/koha/opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
-        Print
-    </a>
-    <!-- TMPL_IF name="virtualshelves" -->
-    <a href="/cgi-bin/koha/opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
-        Add to My Book List
-    </a>
+
+<!-- TMPL_UNLESS NAME="norequests" -->
+	<!-- TMPL_IF NAME="RequestOnOpac" -->
+		<a href="/cgi-bin/koha/opac-reserve.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+		Place Reserve
+		</a>
+	<!-- /TMPL_IF -->
+<!-- /TMPL_UNLESS -->
+        <a href="/cgi-bin/koha/opac-MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+            MARC View
+        </a>
+        <a href="/cgi-bin/koha/opac-ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+            ISBD
+        </a>
+        <a href="/cgi-bin/koha/opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
+            Print
+        </a>
+<!-- TMPL_IF name="virtualshelves" -->
+    <!-- TMPL_IF NAME="loggedinusername" -->
+        <a href="/cgi-bin/koha/opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
+            Add to My Book List
+        </a>
     <!-- /TMPL_IF -->
-    <a href="#" onclick="addRecord('<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
-        Add to My Book Bag
-    </a>
+<!-- /TMPL_IF -->
+        <a href="#" onclick="addRecord('<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
+            Add to My Book Bag
+        </a>
 </div>
 
 <h1>MARC View</h1>
